test/negative/t2.mli.expected

*******************************
********** Parsed file ********
*******************************
[@@@gospel {| axiom a2: 1 = true |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

(*@ axiom ... *)
File "t2.mli", line 11, characters 11-12:
Error: Type mysmatch. Cannot match integer with bool
